--- a/index.html
+++ b/index.html
@@ -141,13 +141,31 @@
           <h2 class="doing-title">What are we doing</h2>
           <ul class="doing-list list">
             <li class="doing-item">
-              <img src="./images/img11.jpg" width="360" alt="monitor" />
+              <img src="./images/img11.jpg" 
+              alt="monitor" 
+              srcset="
+              ./images/img11.jpg  1x,
+              ./images/img11-2x.jpg   2x
+              "
+              width="360" />
             </li>
             <li class="doing-item">
-              <img src="./images/img12.jpg" width="360" alt="phone" />
+              <img src="./images/img12.jpg" 
+              alt="phone"
+              srcset="
+              ./images/img12.jpg  1x,
+              ./images/img12-2x.jpg   2x
+              "
+              width="360" alt="phone" />
             </li>
             <li class="doing-item">
-              <img src="./images/img13.jpg" width="360" alt="laptop" />
+              <img src="./images/img13.jpg"
+              alt="laptop" 
+              srcset="
+              ./images/img13.jpg  1x,
+              ./images/img13-2x.jpg   2x
+              "
+              width="360" />
             </li>
           </ul>
         </div>
@@ -160,7 +178,13 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img src="./images/img21.jpg" width="264" alt="Guerrero" />
+              <img src="./images/img21.jpg"
+              alt="Guerrero"
+              srcset="
+              ./images/img21.jpg  1x,
+              ./images/img21-2x.jpg   2x
+              "
+              width="264"  />
               <div class="team-ctr">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -197,7 +221,13 @@
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/img22.jpg" width="264" alt="Ford" />
+              <img src="./images/img22.jpg" 
+              alt="Ford" 
+              srcset="
+              ./images/img22.jpg  1x,
+              ./images/img22-2x.jpg   2x
+              "              
+              width="264" />
               <div class="team-ctr">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -234,7 +264,13 @@
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/img23.jpg" width="264" alt="Garcia" />
+              <img src="./images/img23.jpg"
+              alt="Garcia"
+              srcset="
+              ./images/img23.jpg  1x,
+              ./images/img23-2x.jpg   2x
+              "              
+              width="264"  />
               <div class="team-ctr">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -271,7 +307,13 @@
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/img24.jpg" width="264" alt="Wilson" />
+              <img src="./images/img24.jpg"
+              alt="Wilson"
+              srcset="
+              ./images/img24.jpg  1x,
+              ./images/img24-2x.jpg   2x
+              "   
+              width="264"  />
               <div class="team-ctr">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
